syntax = "proto3";

package api.coins.v1;

option go_package = "coins/api/coins/v1;v1";
option java_multiple_files = true;
option java_package = "api.coins.v1";

import "google/api/annotations.proto";

service Coins {
    rpc UpdateCoins (UpdateCoinsRequest) returns (UpdateCoinsReply) {
        option (google.api.http) = {
            put: "/v1/coins"
            body: "*"
        };
    }
    rpc GetCoins (GetCoinsRequest) returns (GetCoinsReply) {
        option (google.api.http) = {
            get: "/v1/coins/{id}"
        };
    }
}

message UpdateCoinsRequest {
    int32 id = 1;   // 用户id
    int32 coin = 2; // +1:增加2积分, -1:减少1积分
}
message UpdateCoinsReply {}

message GetCoinsRequest {
    int32 id = 1;
}

message GetCoinsReply {
    int32 coin = 2;
}
